fix for MenuSection and file text overflow fix

--- a/client/src/components/Brief/Brief.module.sass
+++ b/client/src/components/Brief/Brief.module.sass
@@ -89,6 +89,9 @@
       .file
         align-self: stretch
         text-decoration: underline
+        max-width: 100%
+        text-overflow: ellipsis
+        overflow: hidden
 
         &:hover
           color: #6b89b0
