--- a/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
+++ b/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
@@ -59,7 +59,7 @@
     gap: 15px 10px
     @media(max-width: 1100px)
       align-content: center
-      padding-top: 10px
+      padding: 10px 0
       flex-direction: row
       margin-right: 0
       justify-content: center
